# dequedict

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  test.yml
benchmarks/: benchmark.py
dequedict/: __init__.py  _dequedict.c  _dequedict.pyi
dequedict.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_dequedict.py
