[build-system]
requires = [
    "setuptools>=68.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "dequedict"
version = "0.1.1"
description = "Fast ordered dict with deque-like operations at both ends"
readme = "README.md"
requires_python = ">=3.9"
license = "MIT"
authors = [{name = "sebastian"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing_extensions>=4.0",
]

[project.optional_dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]

[tool.setuptools]
packages = [
    "dequedict",
]

[tool.setuptools.package-data]
dequedict = [
    "*.pyi",
    "py.typed",
]

[tool.ruff]
line-length = 120
select = [
    "A",
    "COM812",
    "C4",
    "D",
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "N",
    "ANN",
    "ASYNC",
    "S",
    "T20",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "I",
    "PLW",
]
ignore = [
    "D105",
    "PGH004",
    "D100",
    "D101",
    "D104",
    "D106",
    "ANN003",
    "ANN204",
    "UP009",
    "B026",
    "ANN001",
    "ANN401",
    "ANN202",
    "D107",
    "D102",
    "D103",
    "E731",
    "UP006",
    "UP035",
    "ANN002",
    "ANN201",
    "N805",
    "N806",
    "N803",
    "N804",
    "N802",
    "N801",
    "N807",
]
fixable = [
    "ALL",
]
unfixable = []

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = [
    "ALL",
]
"**__init__.py" = [
    "F401",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "-v"

[dependency-groups]
